--- a/config/conf.yaml
+++ b/config/conf.yaml
@@ -1,3 +1,9 @@
 httpserver:
   host: localhost
-  port: "8080"
+  port: 8080
+database:
+  host: localhost
+  port: 5432
+  user: postgres
+  password: 12345
+  dbname: gost
